# PerspectivePrismMVP

./: .gitignore  README.md  SUBMISSION.md  architecture.md  concurrent_evidence_retrieval.md  implementation_plan.md  task.md  walkthrough.md
.benchmarks/: evaluate_agents.py
backend/: .env.example  pyproject.toml  requirements.txt  test_sanitization_demo.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: analysis_service.py  claim_extractor.py  evidence_retriever.py
backend/app/utils/: input_sanitizer.py
backend/tests/: test_analysis_service_init.py  test_claim_extractor.py  test_input_sanitizer.py
chrome-extension/: .gitignore  BUTTON_STYLES_IMPLEMENTATION.md  CACHE_PERFORMANCE_SUMMARY.md  CACHE_PERFORMANCE_TEST_RESULTS.md  COLOR_CONTRAST_VERIFICATION.md  MANUAL_TESTING_GUIDE.md  PAGE_LOAD_PERFORMANCE_TESTING.md  PANEL_STYLES_IMPLEMENTATION.md  STYLING_GUIDE.md  TESTING_GUIDE.md  VALIDATION_TEST_RESULTS.md  background.js  client.js  config-script.js  consent.js  content.css  content.js  manifest.json  memory-monitor.js  messaging.js  options.css  options.html  options.js  package-lock.json  package.json  panel-styles.js  popup.css  popup.html  popup.js  privacy.html  quota-manager.js  test-analysis.html  test-backend-offline.html  test-button-styles.html  test-cache-performance.html  test-cache-size-monitoring-README.md  test-cache-size-monitoring.html  test-cache.html  test-cancel-analysis.html  test-connection.html  (+12 more)
frontend/: .env.example  eslint.config.js  tsconfig.node.json
(+106 files in other folders)
